Changes for swagger.yaml and add logging statment
